# QuackHacks

./: .gitignore  pyproject.toml
.cursor/rules/: kernel_factory.mdc
benchmarks/: benchmark_002_winnable_tpu_v5e.py
kernels/: kernel_001_gpt2small_matmul_attn_qkv.py  kernel_003_gpt2small_matmul_ffn_up.py  kernel_004_gpt2small_matmul_ffn_down.py  kernel_005_gpt2small_rmsnorm.py
scripts/: Dockerfile.tpu  ingest_rag.py  seed_rag.py
src/kernel_factory/: assembler.py  benchmark.py  cli.py  embeddings.py  mcp_server.py  pipeline.py  rag.py  rag_corpus.py  schemas.py  solver.py  templates.py
src/kernel_factory/kg/: graph.py
tests/: test_assembler.py  test_benchmark.py  test_cli.py  test_mcp_server.py  test_pipeline.py  test_rag.py  test_rag_production.py  test_solver.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/: CodeBlock.tsx  CountUp.tsx  Duck.tsx  ForceGraph.tsx  Nav.tsx  Reveal.tsx  SectionHeading.tsx  Terminal.tsx  TileField.tsx  TileSolveViz.tsx  VmemGauge.tsx
web/src/lib/: benchmarks.ts  estimate.ts  graph.ts  hardware.ts  highlight.ts  presets.ts  solver.test.ts  solver.ts  templates.ts
web/src/sections/: Architecture.tsx  Footer.tsx  Hero.tsx  KnowledgeGraph.tsx  LiveDemo.tsx  Problem.tsx  Proof.tsx  Tooling.tsx
web/src/state/: pipeline.tsx  theme.tsx
