[project]
name = "kernel-factory"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "pydantic>=2.0",
    "kuzu>=0.6.0",
    "lancedb>=0.10.0",
    "numpy>=1.26",
    "rich>=13.0",
    "pyarrow>=14.0",
    "typer>=0.12.0",
    "fastmcp>=2.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Opt-in high-fidelity embeddings. Default RAG uses a torch-free deterministic
# embedder; install this extra to enable sentence-transformers (all-MiniLM-L6-v2)
# via KF_EMBEDDING_BACKEND=sentence-transformers.
embeddings = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
kernel-factory = "kernel_factory.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kernel_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
